@@ -25,13 +25,17 @@ public class FundDistributionServiceImpl implements FundDistributionService {
     private final TalentRepository talentRepository;
     private final UserRepository userRepository;
 
+    // ========== CREATE ==========
     @Override
     public FundDistributionResponse createDistribution(FundDistributionDTO dto) {
-        FundAllocation allocation = fundAllocationRepository.findById(dto.getFundAllocationId())
-                .orElseThrow(() -> new RuntimeException("Fund allocation not found"));
 
-        Talent talent = talentRepository.findById(dto.getTalentId())
-                .orElseThrow(() -> new RuntimeException("Talent not found"));
+        FundAllocation allocation = dto.getFundAllocationId() != null
+                ? fundAllocationRepository.findById(dto.getFundAllocationId()).orElse(null)
+                : null;
+
+        Talent talent = dto.getTalentId() != null
+                ? talentRepository.findById(dto.getTalentId()).orElse(null)
+                : null;
 
         FundDistribution distribution = FundDistribution.builder()
                 .fundAllocation(allocation)
@@ -42,18 +46,26 @@ public class FundDistributionServiceImpl implements FundDistributionService {
                 .notes(dto.getNotes())
                 .build();
 
-        FundDistribution saved = fundDistributionRepository.save(distribution);
-        return mapToResponse(saved);
+        return FundDistributionResponse.fromEntity(
+                fundDistributionRepository.save(distribution)
+        );
     }
 
+    // ========== UPDATE STATUS ==========
     @Override
-    public FundDistributionResponse updateStatus(String distributionId, String statusStr, String approvedById,
-                                                 LocalDate paidDate, String paymentMethod, String transactionRef, String notes) {
+    public FundDistributionResponse updateStatus(
+            String distributionId,
+            String statusStr,
+            String approvedById,
+            LocalDate paidDate,
+            String paymentMethod,
+            String transactionRef,
+            String notes) {
+
         FundDistribution distribution = fundDistributionRepository.findById(distributionId)
                 .orElseThrow(() -> new RuntimeException("Fund distribution not found"));
 
-        FundDistributionStatus status = FundDistributionStatus.valueOf(statusStr.toUpperCase());
-        distribution.setStatus(status);
+        distribution.setStatus(FundDistributionStatus.valueOf(statusStr.toUpperCase()));
 
         if (approvedById != null) {
             User approvedBy = userRepository.findById(approvedById)
@@ -67,64 +79,59 @@ public class FundDistributionServiceImpl implements FundDistributionService {
         if (transactionRef != null) distribution.setTransactionReference(transactionRef);
         if (notes != null) distribution.setNotes(notes);
 
-        FundDistribution updated = fundDistributionRepository.save(distribution);
-        return mapToResponse(updated);
+        return FundDistributionResponse.fromEntity(
+                fundDistributionRepository.save(distribution)
+        );
     }
 
+    // ========== GET BY ID ==========
     @Override
     @Transactional(readOnly = true)
     public FundDistributionResponse getById(String id) {
-        FundDistribution distribution = fundDistributionRepository.findById(id)
+        return fundDistributionRepository.findById(id)
+                .map(FundDistributionResponse::fromEntity)
                 .orElseThrow(() -> new RuntimeException("Fund distribution not found"));
-        return mapToResponse(distribution);
     }
 
+    // ========== GET BY FUND ALLOCATION ==========
     @Override
     @Transactional(readOnly = true)
     public List<FundDistributionResponse> getByFundAllocationId(String fundAllocationId) {
-        return fundDistributionRepository.findByFundAllocationId(fundAllocationId)
+        return fundDistributionRepository.findByFundAllocation_Id(fundAllocationId)
                 .stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .map(FundDistributionResponse::fromEntity)
+                .toList();
     }
 
+    // ========== GET BY TALENT ==========
     @Override
     @Transactional(readOnly = true)
     public List<FundDistributionResponse> getByTalentId(String talentId) {
-        return fundDistributionRepository.findByTalentId(talentId)
+        return fundDistributionRepository.findByTalent_Id(talentId)
                 .stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .map(FundDistributionResponse::fromEntity)
+                .toList();
     }
 
+    // ========== GET BY STATUS ==========
+    @Override
+    @Transactional(readOnly = true)
+    public List<FundDistributionResponse> getByStatus(String status) {
+        return fundDistributionRepository
+                .findByStatus(FundDistributionStatus.valueOf(status.toUpperCase()))
+                .stream()
+                .map(FundDistributionResponse::fromEntity)
+                .toList();
+    }
+
+    // ========== TOTAL PAID ==========
     @Override
     @Transactional(readOnly = true)
     public BigDecimal getTotalPaidForTalent(String talentId) {
-        return fundDistributionRepository.findByTalentId(talentId)
+        return fundDistributionRepository.findByTalent_Id(talentId)
                 .stream()
                 .filter(d -> d.getStatus() == FundDistributionStatus.PAID)
                 .map(FundDistribution::getAmount)
                 .reduce(BigDecimal.ZERO, BigDecimal::add);
-    }
-
-    private FundDistributionResponse mapToResponse(FundDistribution distribution) {
-        return FundDistributionResponse.builder()
-                .id(distribution.getId())
-                .fundAllocationId(distribution.getFundAllocation().getId())
-                .projectName(distribution.getFundAllocation().getProject().getProjectName())
-                .talentName(distribution.getTalent().getUser().getFullName())
-                .talentStudentCode(distribution.getTalent().getStudentCode())
-                .amount(distribution.getAmount())
-                .percentage(distribution.getPercentage())
-                .status(distribution.getStatus())
-                .approvedByName(distribution.getApprovedBy() != null ? distribution.getApprovedBy().getFullName() : null)
-                .approvedAt(distribution.getApprovedAt())
-                .paidDate(distribution.getPaidDate())
-                .paymentMethod(distribution.getPaymentMethod())
-                .transactionReference(distribution.getTransactionReference())
-                .notes(distribution.getNotes())
-                .createdAt(distribution.getCreatedAt())
-                .updatedAt(distribution.getUpdatedAt())
-                .build();
     }
 }
